Handle previously ignored LC_* values

Previously, LC_ADDRESS, LC_PAPER, LC_TELEPHONE and LC_MONETARY
could be changed through system settings (see also c7c2a3a8),
but plasma never actually changed the corresponding environment variables.

To guard against this kind of bug in the future, this commit makes plasma
put all LC_* values (even those not currently supported by system settings)
from plasma-localerc into the environment.

BUG: 480379
FIXED-IN: 5.27.11


(cherry picked from commit a29530af6cdc2c9c06f455823b2f95b81608774c)